--- a/src/pro/styles/ProActivityInfo.css
+++ b/src/pro/styles/ProActivityInfo.css
@@ -111,6 +111,7 @@
   display: flex;
   margin-right: 50px;
   width: 100%;
+  margin-top: 1%;
 }
 
 .ActivityInfo-center-button {
@@ -141,6 +142,11 @@
   margin-left: 10px;
 }
 
+.ActivityInfo-column_5 {
+  flex: 0 0 5%;
+  max-width: 5%;
+}
+
 .ActivityInfo-column_10 {
   flex: 0 0 10%;
   max-width: 10%;
@@ -158,7 +164,11 @@
   flex: 0 0 20%;
   max-width: 20%;
   font-weight: bold;
+  display: flex; /* Utilise Flexbox */
+  justify-content: center; /* Centre horizontalement */
+  align-items: center; /* Centre verticalement */
 }
+
 
 
 .ActivityInfo-column_25 {
@@ -201,7 +211,6 @@
   border-radius: 10px;
   padding: 6px;
   width: 100%;
-  margin-top: 8px;
   font-size: 14px;
   text-align: center;
   font-weight: bold; /* Texte en gras */
@@ -249,7 +258,6 @@
 
 .ActivityInfo-header {
   display: flex;
-  justify-content: space-between;
   align-items: center;
   margin-bottom: 10px; /* Espacement entre le bouton Retour et les boutons Modifier/Supprimer */
 }
@@ -294,7 +302,7 @@
   color: white;
 }
 
-.ActivityInfo-header button {
+.ActivityInfo-Button {
   padding: 5px 10px;
   border: none;
   border-radius: 5px;
@@ -303,4 +311,18 @@
   box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.2);
   background-color: #E1604D; /* Couleur pour le bouton Retour */
   color: white;
+}
+
+.ActivityInfo-left-side {
+  /* margin-lef */
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.ActivityInfo-right-side {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  /* columns: 6rem; */
 }
