feat: new site_vitrine

--- a/src/styles/pages/manageAvatar.css
+++ b/src/styles/pages/manageAvatar.css
@@ -79,7 +79,7 @@
   cursor: pointer; /* Changez le curseur pour indiquer qu'il est cliquable */
 }
 
-.active {
+.fdp {
   background-color: blue;
   color: white;
   font-weight: bold;
